Correct error in Poster AC modelisation

--- a/_talks/2024-11-14-Poster-3.md
+++ b/_talks/2024-11-14-Poster-3.md
@@ -1,5 +1,5 @@
 ---
-title: "Journées de l'Action Coordonnée "Modélisation des maladies infectieuses""
+title: "Journées de l'Action Coordonnée 'Modélisation des maladies infectieuses'"
 collection: talks
 type: "Poster presentation"
 permalink: https://ac-modelling.sciencesconf.org
